--- a/2page.html
+++ b/2page.html
@@ -15,32 +15,32 @@
   </div>
 </header>
 
-  <main class="container">
+ <main class="container">
     <section class="reel-gallery">
       <!-- Replace below video src with your reels -->
       <div class="reel">
-        <video src="videos\ASTROLOGER.mp4" controls></video>
+        <video src="videos\compress\1th.mp4" controls></video>
       </div>
       <div class="reel">
-        <video src="videos\Elina.mp4" controls></video>
+        <video src="videos\compress\21th (1).mp4" controls></video>
       </div>
       <div class="reel">
-        <video src="videos\real state.mp4" controls></video>
+        <video src="videos\compress\23th_prob3.mp4" controls></video>
       </div>
       <div class="reel">
-        <video src="videos\ree.mp4" controls></video>
+        <video src="videos\compress\Elina (1).mp4" controls></video>
       </div>
       <div class="reel">
-        <video src="videos\chai waale ....mp4" controls></video>
+        <video src="videos\compress\IMG_0469.mp4" controls></video>
       </div>
       <div class="reel">
-        <video src="videos\IMG_0469.MP4" controls></video>
+        <video src="videos\compress\IMG_1809_2_prob3.mp4" controls></video>
       </div>
       <div class="reel">
-        <video src="videos\4thh.mp4" controls></video>
+        <video src="videos\compress\slab fp1.mp4" controls></video>
       </div>
       <div class="reel">
-        <video src="videos\Bhumika & Anmol Highlight.mp4" controls></video>
+        <video src="#" controls></video>
       </div>
     </section>
   </main>
@@ -49,4 +49,5 @@
     <p>© 2025 Sujal Lawhate — All Rights Reserved</p>
   </footer>
 </body>
+
 </html>
